<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">fuck</string>
    <string name="app_in_name">Финансы</string>
    <string name="app_name_after">Управляй своими финансами</string>
    <string name="reg">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="log">ВОЙТИ</string>
    <string name="email">Email</string>
    <string name="Password">Пароль</string>
    <string name="btnreg">РЕГИСТРАЦИЯ</string>
    <string name="btnlog">ВХОД</string>
    <string name="choicetext">Выбор метода</string>
    <string name="firstvar">1. Распределить оставшийся бюджет из 50% и 30% на новый месяц. Сбережения сохраняются </string>
    <string name="secondvar">2. Посмотреть сэкономленную сумму и обновить все иконки</string>
    <string name="header">Выберите, \n что вы хотите сделать с оставшимися деньгами</string>
    <string name="shit">Хотите \n потратить сбережения? </string>
</resources>