<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#efdecd">


    <LinearLayout
        android:id="@+id/register_text"
        android:layout_width="match_parent"
        android:layout_height="224dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="350dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/app_in_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/app_name_after"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="27dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="27dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="2">

        <Button
            android:id="@+id/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:backgroundTint="#cc7722"
            android:fontFamily="@font/montserrat_bold"
            android:onClick="registration"
            android:text="@string/reg" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:backgroundTint="#cc7722"
            android:fontFamily="@font/montserrat_bold"
            android:onClick="login"
            android:text="@string/log" />
    </LinearLayout>

</RelativeLayout>

