<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReloadDialog">

    <LinearLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/header"
            android:fontFamily="@font/comfortaa_bold"
            />

        <TextView
            android:id="@+id/firstvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/firstvar"
            android:fontFamily="@font/comfortaa_medium"
            />

        <TextView
            android:id="@+id/secondvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:text="@string/secondvar"
            android:fontFamily="@font/comfortaa_medium"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@+id/text"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/distribute"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/comfortaa_bold"
            android:text="Распределить"
            android:textColor="@color/buttonscolor"
            android:textSize="16sp"

            />

        <Button
            android:id="@+id/update"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/comfortaa_bold"
            android:text="Обновить"
            android:textColor="@color/buttonscolor"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>